css/main.css
html {
  background-color: #e2e2e2;

  font-family: sans-serif;
}

.polaroid {
  margin: 0;
  padding: 10px;
  width: 250px;

  background-color: #fff;
  border-radius: 4px;
  box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
  transition: box-shadow 200ms linear;
  position: absolute;
}

.polaroid > img {
  display: block;
  width: 100%;
}

.polaroid > figcaption {
  color: #fff;
  text-shadow: 1px 1px 3px #000;
  position: absolute;
  bottom: 20px;
  right: 84px;
}

.polaroid:first-child {
  left: 20%
  top:100px;
  transform: rotate(-12deg);
  z-index: 1;
}

.polaroid:nth-child(2) {
  left: 40%;
  top: 100px;
  transform: rotate(33deg);
  z-index: 2;
}

.polaroid:hover {
  position: absolute;
  z-index: 4;
  transform: rotate(0deg);
  box-shadow: 1px 10px 30px rgba(0, 0, 0, .7);
}

